--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"react": "^18.0.0",
 		"react-device-detect": "^2.1.2",
 		"react-dom": "^18.0.0",
+		"react-lazy-load-image-component": "^1.5.3",
+		"react-router-dom": "6",
 		"react-scripts": "5.0.0",
 		"tw-elements": "^1.0.0-alpha12"
 	},
