--- a/package.json
+++ b/package.json
@@ -2,40 +2,32 @@
 	"name": "movies-db",
 	"version": "0.1.0",
 	"private": true,
-	"dependencies": {
-		"daisyui": "2.13.6",
-		"date-fns": "2.28.0",
-		"react": "18.0.0",
-		"react-device-detect": "2.2.2",
-		"react-dom": "18.0.0",
-		"react-router-dom": "6",
-		"react-scripts": "5.0.0",
-		"tw-elements": "1.0.0-alpha12"
-	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build"
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
 	},
-	"eslintConfig": {
-		"extends": [
-			"react-app"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+	"dependencies": {
+		"daisyui": "^2.13.6",
+		"date-fns": "^2.28.0",
+		"next": "12.1.5",
+		"re-carousel": "^2.4.0",
+		"react": "18.0.0",
+		"react-device-detect": "^2.2.2",
+		"react-dom": "18.0.0",
+		"sharp": "^0.30.3",
+		"tw-elements": "^1.0.0-alpha12"
 	},
 	"devDependencies": {
-		"autoprefixer": "10.4.4",
-		"postcss": "8.4.12",
-		"tailwindcss": "3.0.23"
+		"@types/node": "17.0.24",
+		"@types/react": "18.0.5",
+		"@types/react-dom": "18.0.0",
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.13.0",
+		"eslint-config-next": "12.1.5",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.24",
+		"typescript": "4.6.3"
 	}
 }
