--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"date-fns": "^2.28.0",
 		"next": "12.1.5",
 		"react": "18.0.0",
+		"react-currency-format": "^1.1.0",
 		"react-device-detect": "^2.2.2",
 		"react-dom": "18.0.0",
 		"sharp": "^0.30.3",
@@ -21,6 +22,7 @@
 	"devDependencies": {
 		"@types/node": "17.0.24",
 		"@types/react": "18.0.5",
+		"@types/react-currency-format": "^1.0.0",
 		"@types/react-dom": "18.0.0",
 		"autoprefixer": "^10.4.4",
 		"eslint": "8.13.0",
