--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"react-currency-format": "^1.1.0",
 		"react-device-detect": "^2.2.2",
 		"react-dom": "18.0.0",
+		"react-markdown": "^8.0.2",
+		"remark-gfm": "^3.0.1",
 		"sharp": "^0.30.3",
 		"tw-elements": "^1.0.0-alpha12"
 	},
