--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"tw-elements": "^1.0.0-alpha12"
 	},
 	"devDependencies": {
+		"@fullhuman/postcss-purgecss": "^4.1.3",
 		"@types/node": "17.0.24",
 		"@types/react": "18.0.5",
 		"@types/react-currency-format": "^1.0.0",
