--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"daisyui": "^2.13.6",
-		"date-fns": "^2.28.0",
+		"daisyui": "2.14.1",
+		"date-fns": "2.28.0",
 		"next": "12.1.5",
 		"react": "18.0.0",
-		"react-currency-format": "^1.1.0",
-		"react-device-detect": "^2.2.2",
+		"react-currency-format": "1.1.0",
+		"react-device-detect": "2.2.2",
 		"react-dom": "18.0.0",
-		"react-markdown": "^8.0.2",
-		"remark-gfm": "^3.0.1",
-		"sharp": "^0.30.3",
-		"tw-elements": "^1.0.0-alpha12"
+		"react-markdown": "8.0.2",
+		"remark-gfm": "3.0.1",
+		"sharp": "0.30.4",
+		"tw-elements": "1.0.0-alpha12"
 	},
 	"devDependencies": {
-		"@types/node": "17.0.24",
+		"@types/node": "17.0.25",
 		"@types/react": "18.0.5",
-		"@types/react-currency-format": "^1.0.0",
-		"@types/react-dom": "18.0.0",
-		"autoprefixer": "^10.4.4",
+		"@types/react-currency-format": "1.0.0",
+		"@types/react-dom": "18.0.1",
+		"autoprefixer": "10.4.4",
 		"eslint": "8.13.0",
 		"eslint-config-next": "12.1.5",
-		"postcss": "^8.4.12",
-		"tailwindcss": "^3.0.24",
+		"postcss": "8.4.12",
+		"tailwindcss": "3.0.24",
 		"typescript": "4.6.3"
 	}
 }
