--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"daisyui": "2.14.1",
 		"date-fns": "2.28.0",
 		"next": "12.1.5",
+		"next-pwa": "^5.5.2",
 		"react": "18.0.0",
 		"react-currency-format": "1.1.0",
 		"react-device-detect": "2.2.2",
