--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"axios": "^0.27.2",
+		"axios": "0.27.2",
 		"daisyui": "2.15.1",
 		"date-fns": "2.28.0",
 		"next": "12.1.6",
-		"next-pwa": "^5.5.2",
+		"next-pwa": "5.5.2",
 		"react": "18.1.0",
 		"react-currency-format": "1.1.0",
 		"react-device-detect": "2.2.2",
